manifests/aria/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aria
spec:
  selector:
    app: aria
  ports:
    - name: ariang
      protocol: TCP
      port: 80
      targetPort: 80
    - name: rpc
      protocol: TCP
      port: 6800
      targetPort: 6800
  type: ClusterIP
