manifests/aria/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aria
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - aria.vanad.is
    secretName: aria-vanad-is-tls

  rules:
  - host: aria.vanad.is
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aria
            port:
              number: 80
